# ros2-map-compression

./: README.md
src/: decompressed_map_subscriber.py  package.xml  setup.cfg  setup.py
src/map_compression/: compressed_map_publisher.py
src/map_compression/map_compression/: map_comparator.py
