<package format="3">
  <name>map_compression</name>
  <version>0.0.1</version>
  <description>Real-time map compression and decompression for SLAM Toolbox</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

